[WAL-4718] Fixed the overlapping issue on the search bar component

--- a/src/table/TableQuery.scss
+++ b/src/table/TableQuery.scss
@@ -6,6 +6,10 @@
   input {
     font-size: 13px;
     height: 36px;
+
+    &.form-control {
+      z-index: 0;
+    }
   }
 
   .btn {
